--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
+# Android Studio
+.idea/
+.gradle/
+build/
+local.properties
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+
+# OS files
 .DS_Store
-/build
-/captures
+Thumbs.db
+
+# Native build
 .externalNativeBuild
 .cxx
-local.properties
+
+# Captures
+/captures
